Refactor route to get vendor products for a user.
