# src/controllers/mod.rs
@@ -1,4 +1,3 @@
 pub mod other;
 pub mod vendor;
 pub mod user;
-pub mod product;
