# src/routes/product.rs
@@ -1,8 +1,0 @@
-use actix_web::web;
-use crate::controllers::product::{
-    vendor_products
-};
-
-pub fn config(cfg: &mut web::ServiceConfig) {
-    cfg.service(vendor_products::route);
-}
